# Freedom-deprecated

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: a.out  main.c
